// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should match with the *left* props 1`] = `
<div
  className="root"
  id="root"
>
  <Modal
    center={false}
    className=""
    contentLabel="Default Modal"
    hasPadding={true}
    left={true}
    onCancel={null}
    onRequestClose={null}
    open={true}
    right={true}
    widthLevel={1}
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, vitae!
  </Modal>
</div>
`;

exports[`Modal should match with the *right* props 1`] = `
<div
  className="root"
  id="root"
>
  <Modal
    center={false}
    className=""
    contentLabel="Default Modal"
    hasPadding={true}
    left={false}
    onCancel={null}
    onRequestClose={null}
    open={true}
    right={true}
    widthLevel={1}
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, vitae!
  </Modal>
</div>
`;

exports[`Modal should match with the snapshot 1`] = `
<div
  className="root"
  id="root"
>
  <Modal
    center={false}
    className=""
    contentLabel="Default Modal"
    hasPadding={true}
    left={false}
    onCancel={null}
    onRequestClose={null}
    open={true}
    right={true}
    widthLevel={1}
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, vitae!
  </Modal>
</div>
`;
